--- a/app/src/main/res/layout/fragment_property_anim.xml
+++ b/app/src/main/res/layout/fragment_property_anim.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipChildren="false"
-    android:gravity="bottom|center_horizontal"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:background="@drawable/red_circle" />
+        android:background="#ff0000" />
 </LinearLayout>
