--- a/app/src/main/res/anim/scale.xml
+++ b/app/src/main/res/anim/scale.xml
@@ -3,7 +3,7 @@
     android:duration="200"
     android:fromXScale="1.0"
     android:fromYScale="1.0"
-    android:pivotX="800"
-    android:pivotY="-600"
-    android:toXScale="0.0"
-    android:toYScale="0.0" />
+    android:pivotX="50%"
+    android:pivotY="50%"
+    android:toXScale="1.4"
+    android:toYScale="0.3" />
