--- a/app/src/main/res/layout/fragment_property_anim.xml
+++ b/app/src/main/res/layout/fragment_property_anim.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp"
             android:gravity="center_vertical" />
 
         <Button
@@ -31,8 +32,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/durationSeek"
-            android:layout_centerHorizontal="true"
             android:text="@string/animate" />
+
+        <Button
+            android:id="@+id/resetButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/durationSeek"
+            android:layout_toRightOf="@+id/animateButton"
+            android:text="@string/reset" />
 
         <View
             android:id="@+id/square"
