--- a/app/src/main/res/anim/set.xml
+++ b/app/src/main/res/anim/set.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
+    <alpha
+        android:duration="300"
+        android:fillAfter="false"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.4" />
     <scale
         android:duration="700"
         android:fillAfter="false"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toXScale="1.4"
-        android:toYScale="0.6" />
+        android:toXScale="0.5"
+        android:toYScale="0.5" />
     <set android:interpolator="@android:anim/decelerate_interpolator">
-        <scale
-            android:duration="400"
-            android:fillBefore="false"
-            android:fromXScale="1.4"
-            android:fromYScale="0.6"
-            android:pivotX="50%"
-            android:pivotY="50%"
-            android:startOffset="700"
-            android:toXScale="0.0"
-            android:toYScale="0.0" />
         <rotate
-            android:duration="400"
-            android:fromDegrees="0"
-            android:pivotX="50%"
-            android:pivotY="50%"
+            android:duration="300"
+            android:fillBefore="false"
             android:startOffset="700"
-            android:toDegrees="-45"
-            android:toYScale="0.0" />
+            android:fromDegrees="0"
+            android:pivotX="20%"
+            android:pivotY="80%"
+            android:toDegrees="90" />
+        <translate
+            android:duration="300"
+            android:fillAfter="true"
+            android:fillBefore="false"
+            android:fromYDelta="0"
+            android:startOffset="700"
+            android:toYDelta="100%" />
     </set>
 </set>
