--- a/app/src/main/res/layout/fragment_view_anim.xml
+++ b/app/src/main/res/layout/fragment_view_anim.xml
@@ -53,5 +53,5 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/red_circle" />
+        android:background="#FFFF0000" />
 </LinearLayout>
