--- a/app/src/main/res/anim/set.xml
+++ b/app/src/main/res/anim/set.xml
@@ -1,35 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true"
     android:shareInterpolator="false">
-    <alpha
-        android:duration="300"
-        android:fillAfter="false"
-        android:fromAlpha="1.0"
-        android:toAlpha="0.4" />
     <scale
-        android:duration="700"
-        android:fillAfter="false"
+        android:duration="1000"
         android:fromXScale="1.0"
         android:fromYScale="1.0"
         android:pivotX="50%"
         android:pivotY="50%"
         android:toXScale="0.5"
         android:toYScale="0.5" />
-    <set android:interpolator="@android:anim/decelerate_interpolator">
+
+    <rotate
+        android:duration="1000"
+        android:fromDegrees="0"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toDegrees="45" />
+    <set
+        android:fillBefore="false"
+        android:fillEnabled="true"
+        android:interpolator="@android:anim/decelerate_interpolator">
+        <scale
+            android:duration="700"
+            android:fromXScale="1.0"
+            android:fromYScale="1.0"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:startOffset="1000"
+            android:toXScale="2.0"
+            android:toYScale="2.0" />
         <rotate
-            android:duration="300"
-            android:fillBefore="false"
-            android:startOffset="700"
-            android:fromDegrees="0"
-            android:pivotX="20%"
-            android:pivotY="80%"
-            android:toDegrees="90" />
+            android:duration="700"
+            android:fromDegrees="45"
+            android:pivotX="50%"
+            android:pivotY="50%"
+            android:startOffset="1000"
+            android:toDegrees="-45" />
         <translate
-            android:duration="300"
-            android:fillAfter="true"
-            android:fillBefore="false"
+            android:duration="700"
             android:fromYDelta="0"
-            android:startOffset="700"
-            android:toYDelta="100%" />
+            android:startOffset="1000"
+            android:toYDelta="300" />
     </set>
 </set>
