--- a/app/src/main/res/layout/fragment_property_anim.xml
+++ b/app/src/main/res/layout/fragment_property_anim.xml
@@ -44,12 +44,10 @@
 
         <View
             android:id="@+id/square"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/animateButton"
-            android:layout_centerHorizontal="true"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_margin="10dp"
+            android:layout_centerInParent="true"
             android:background="@color/colorPrimary"
             android:minHeight="100dp"
             android:minWidth="100dp" />
