--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="meng.animtest.MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/show_fps"
+        android:title="@string/fps"
         android:orderInCategory="100"
+        android:checkable="true"
+        android:checked="false"
         app:showAsAction="never" />
 </menu>
