--- a/app/src/main/res/layout/fragment_cart_anim.xml
+++ b/app/src/main/res/layout/fragment_cart_anim.xml
@@ -33,7 +33,7 @@
 
         <TextView
             android:id="@+id/consult"
-            android:layout_width="48dp"
+            android:layout_width="58dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="咨询"
@@ -46,7 +46,7 @@
 
         <LinearLayout
             android:id="@+id/cart_container"
-            android:layout_width="48dp"
+            android:layout_width="58dp"
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:gravity="center"
@@ -121,7 +121,7 @@
     <FrameLayout
         android:id="@+id/anim_container"
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:clipChildren="false"
         android:visibility="invisible"
@@ -135,10 +135,10 @@
 
         <LinearLayout
             android:id="@+id/anim_cart_cover"
-            android:layout_width="48dp"
+            android:layout_width="58dp"
             android:layout_height="48dp"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="49dp"
+            android:layout_marginLeft="59dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -188,14 +188,26 @@
 
         </LinearLayout>
 
-        <View
+        <LinearLayout
             android:id="@+id/anim_start_cover"
-            android:layout_width="30dp"
+            android:layout_width="match_parent"
             android:layout_height="15dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="33dp"
-            android:layout_marginLeft="160dp"
-            android:background="#FFB122" />
+            android:layout_marginLeft="117dp"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="15dp"
+                android:layout_weight="1"
+                android:background="#FFB122" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="15dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
     </FrameLayout>
 
