--- a/app/src/main/res/layout/fragment_cart_anim.xml
+++ b/app/src/main/res/layout/fragment_cart_anim.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipChildren="false">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipChildren="false">
 
     <View
         android:id="@+id/pop_anchor"
@@ -75,7 +75,8 @@
                     android:gravity="center"
                     android:minHeight="15dp"
                     android:minWidth="15dp"
-                    android:padding="1dp"
+                    android:paddingLeft="3dp"
+                    android:paddingRight="3dp"
                     android:textColor="@android:color/white"
                     android:textSize="9sp"
                     android:visibility="gone"
@@ -170,6 +171,8 @@
                     android:gravity="center"
                     android:minHeight="15dp"
                     android:minWidth="15dp"
+                    android:paddingLeft="3dp"
+                    android:paddingRight="3dp"
                     android:textColor="@android:color/white"
                     android:textSize="9sp"
                     android:visibility="gone"
